<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mm.shoppinglist.Popup"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_remove"
        android:id="@+id/areYouSure"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:padding="@dimen/padding_button"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TVProduct"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:padding="@dimen/padding_button"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yes"
        android:text="@string/yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="remove"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no"
        android:text="@string/no"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="dismiss"
        />

</RelativeLayout>
